force-app/main/default/objects/User/fields/Assigned_Contract_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Contract_Administrator__c</fullName>
    <label>Assigned Contract Administrator</label>
    <relationshipName>Assigned_Contract_Admin</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>