force-app/main/default/objects/User/fields/Assigned_Credit_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Credit_Analyst__c</fullName>
    <label>Assigned Credit Analyst</label>
    <relationshipName>Credit_analyst</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>