force-app/main/default/objects/User/fields/Assigned_Pricing_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Pricing_Analyst__c</fullName>
    <label>Assigned Pricing Analyst</label>
    <relationshipName>Pricing_Users</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>