force-app/main/default/objects/User/fields/Assigned_Volume_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Volume_Analyst__c</fullName>
    <label>Assigned Volume Analyst</label>
    <relationshipName>Volume_Analyst</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>