force-app/main/default/objects/User/fields/CES_Contract_Email__c.field-meta.xml
<CustomField>
    <fullName>CES_Contract_Email__c</fullName>
    <label>CES Contract Email</label>
    <type>Email</type>
</CustomField>