force-app/main/default/objects/User/fields/Credit_Analyst_Email__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analyst_Email__c</fullName>
    <defaultValue>$User.Email</defaultValue>
    <label>Credit Analyst Email</label>
    <type>Email</type>
</CustomField>