force-app/main/default/objects/User/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <description>Who is this user&#39;s Director?</description>
    <inlineHelpText>Who is this user&#39;s Director?</inlineHelpText>
    <label>Director</label>
    <relationshipName>DirectorUsers</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>