force-app/main/default/objects/User/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <formula>RIGHT( Email, LEN(Email)-FIND(&quot;@&quot; ,Email ))</formula>
    <label>Email Domain</label>
    <type>Text</type>
</CustomField>