force-app/main/default/objects/User/fields/Is_Sales_Role__c.field-meta.xml
<CustomField>
    <fullName>Is_Sales_Role__c</fullName>
    <formula>IF(CONTAINS(UserRole.Name, &#39;Sales&#39;), true, false)</formula>
    <label>Is Sales Role</label>
    <type>Checkbox</type>
</CustomField>