force-app/main/default/objects/User/fields/Make_Profile_Public__c.field-meta.xml
<CustomField>
    <fullName>Make_Profile_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show this user on the TrueCost people page</description>
    <inlineHelpText>Show this user on the TrueCost people page</inlineHelpText>
    <label>Make Profile Public</label>
    <type>Checkbox</type>
</CustomField>