force-app/main/default/objects/User/fields/Managers_Email__c.field-meta.xml
<CustomField>
    <fullName>Managers_Email__c</fullName>
    <description>User&#39;s Manager&#39;s Email</description>
    <formula>Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>User&#39;s Manager&#39;s Email if the Manager is assigned.</inlineHelpText>
    <label>Managers Email</label>
    <type>Text</type>
</CustomField>