force-app/main/default/objects/User/fields/Managers_Phone__c.field-meta.xml
<CustomField>
    <fullName>Managers_Phone__c</fullName>
    <description>User&#39;s Manager&#39;s Phone</description>
    <formula>Manager.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>User&#39;s Manager&#39;s Phone if the Manager is assigned.</inlineHelpText>
    <label>Managers Phone</label>
    <type>Text</type>
</CustomField>