force-app/main/default/objects/User/fields/Old_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_ID__c</fullName>
    <description>ID from previous org</description>
    <externalId>true</externalId>
    <inlineHelpText>ID from previous org</inlineHelpText>
    <label>Old ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>