force-app/main/default/objects/User/fields/Public_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Public_Picture_URL__c</fullName>
    <description>shows on the TrueCost people page.  Link this to a static resource (similar to REP logos)</description>
    <inlineHelpText>shows on the TrueCost people page.  Link this to a static resource (similar to REP logos)</inlineHelpText>
    <label>Public Picture URL</label>
    <type>Url</type>
</CustomField>