force-app/main/default/objects/User/fields/Public_Profile_Description__c.field-meta.xml
<CustomField>
    <fullName>Public_Profile_Description__c</fullName>
    <description>Shown on the TrueCost people page</description>
    <inlineHelpText>Shown on the TrueCost people page</inlineHelpText>
    <label>Public Profile Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>