force-app/main/default/objects/User/fields/Uses_Facebook__c.field-meta.xml
<CustomField>
    <fullName>Uses_Facebook__c</fullName>
    <formula>not(isblank(Facebook_ID__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uses Facebook</label>
    <type>Checkbox</type>
</CustomField>