force-app/main/default/objects/User/validationRules/Sales_users_need_phone_numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_users_need_phone_numbers</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Profile.Name = &quot;CES Standard User&quot;,
ISBLANK( Phone )
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>CES sales users must have a primary phone number to display on market reports.</errorMessage>
</ValidationRule>