force-app/main/default/objects/User/listViews/All_CNP_Improvement_Users.listView-meta.xml
<ListView>
    <fullName>All_CNP_Improvement_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Profile_Name__c</field>
        <operation>startsWith</operation>
        <value>CNP Improvement</value>
    </filters>
    <label>All CNP Improvement Users</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>