force-app/main/default/objects/User/listViews/All_MES_Users.listView-meta.xml
<ListView>
    <fullName>All_MES_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>PASSWORD_EXPIRES</columns>
    <columns>EMPLOYEE_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>Mobile Energy Solutions</value>
    </filters>
    <label>All MES Users</label>
    <language>en_US</language>
</ListView>