force-app/main/default/objects/User/listViews/All_MREUsersActive.listView-meta.xml
<ListView>
    <fullName>All_MREUsersActive</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.COMPANY_NAME</field>
        <operation>startsWith</operation>
        <value>MRE</value>
    </filters>
    <label>All MRE Users Active</label>
    <language>en_US</language>
</ListView>