force-app/main/default/objects/User/listViews/All_New_CRES_Users.listView-meta.xml
<ListView>
    <fullName>All_New_CRES_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>PASSWORD_EXPIRES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_BY_NAME</field>
        <operation>equals</operation>
        <value>Tracey Pham</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>6/1/2016 12:00 AM</value>
    </filters>
    <label>All New CRES Users Created by Tracey</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_System</group>
    </sharedTo>
</ListView>