force-app/main/default/objects/User/listViews/AllCESStandardUsersActive.listView-meta.xml
<ListView>
    <fullName>AllCESStandardUsersActive</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>External_ID__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>EMPLOYEE_NUMBER</columns>
    <columns>MANAGER</columns>
    <columns>Director__c</columns>
    <columns>Assigned_Credit_Analyst__c</columns>
    <columns>Case_Safe_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>CES</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All CES Standard Users Active</label>
    <language>en_US</language>
</ListView>