force-app/main/default/objects/User/listViews/AllCESStandardUsersINACTIVE.listView-meta.xml
<ListView>
    <fullName>AllCESStandardUsersINACTIVE</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>PASSWORD_EXPIRES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>CES</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All CES Standard Users INACTIVE</label>
    <language>en_US</language>
</ListView>