force-app/main/default/objects/User/listViews/CorpComm_Users.listView-meta.xml
<ListView>
    <fullName>CorpComm_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>PASSWORD_EXPIRES</columns>
    <columns>EMPLOYEE_NUMBER</columns>
    <columns>MANAGER</columns>
    <columns>Director__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>CorpComm</value>
    </filters>
    <label>CorpComm Users</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_System</group>
    </sharedTo>
</ListView>